WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23912
REGRESSION: Select elements don't scroll in response to the mouse wheel
https://bugs.webkit.org/show_bug.cgi?id=23912
Summary
REGRESSION: Select elements don't scroll in response to the mouse wheel
Oliver Hunt
Reported
2009-02-11 20:54:41 PST
When attempting to scroll the Component select element on bugzilla i found that the entire page scrolled, rather than just the select contents. Steps to reproduce: 1. Go to
https://bugs.webkit.org/enter_bug.cgi?product=WebKit
2. move mouse over Component select element 3. try to scroll select element with scroll wheel
Attachments
Patch
(1.83 KB, patch)
2009-02-12 12:13 PST
,
Dave Hyatt
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Rowe (bdash)
Comment 1
2009-02-11 20:55:46 PST
<
rdar://problem/6579560
>
Adele Peterson
Comment 2
2009-02-11 20:57:22 PST
I think this used to work. I wonder when it regressed.
Oliver Hunt
Comment 3
2009-02-11 21:00:26 PST
(In reply to
comment #2
)
> I think this used to work. I wonder when it regressed. >
It worked relatively recently, i'm blaming hyatt's many recent changes, although i have no real basis for this other than my fear of large changes, and, well, it's hyatt ;D
Adele Peterson
Comment 4
2009-02-11 21:00:42 PST
Yup, works in 3.1.1
Dave Hyatt
Comment 5
2009-02-12 12:13:47 PST
Created
attachment 27616
[details]
Patch
Simon Fraser (smfr)
Comment 6
2009-02-12 12:15:41 PST
Comment on
attachment 27616
[details]
Patch
> Index: ChangeLog > =================================================================== > --- ChangeLog (revision 40918) > +++ ChangeLog (working copy) > @@ -1,3 +1,16 @@ > +2009-02-12 David Hyatt <
hyatt@apple.com
> > + > + Fix for
https://bugs.webkit.org/show_bug.cgi?id=23912
> + > + I have no idea why this broke. As far as I can tell the old code never should have worked in > + the first place. Add code to handleWheelEvent that will find an enclosing renderer for a node > + in order to attempt a wheel scroll. > + > + Reviewed by NOBODY (OOPS!).
"Reviewed by" should go at the top. r-me.
Dave Hyatt
Comment 7
2009-02-12 12:19:11 PST
Fixed in
r40919
. It bugs me that I have no idea what change broke this or why it ever worked in the first place.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug