2009-02-12  David Hyatt  <hyatt@apple.com>

Reviewed by Simon Fraser

        Fix for https://bugs.webkit.org/show_bug.cgi?id=23912

        I have no idea why this broke.  As far as I can tell the old code never should have worked in
        the first place.  Add code to handleWheelEvent that will find an enclosing renderer for a node
        in order to attempt a wheel scroll.

        * page/EventHandler.cpp:
        (WebCore::EventHandler::handleWheelEvent):



Canonical link: https://commits.webkit.org/33037@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40919 268f45cc-cd09-0410-ab3c-d52691b4dbfc